# TeamOnep

./: CMakeLists.txt  CMakePresets.txt  README.md  main.cpp
source/core/: engine.cpp  engine.hpp  importer.cpp  importer.hpp  resource_pool.cpp  resource_pool.hpp  resource_pool_init.cpp  todo.hpp
source/core/313/: master.cpp  master.hpp  slave.cpp  slave.hpp
source/core/CPU_Renderer/: path_tracer.cpp
source/core/GPU/: Batch.hpp  CMakeLists.txt  IDescriptorAllocator.hpp  IMesh.h  IResource.hpp  IResourceBuilder.h  ISwapchain.h  ITexture.hpp  IVertex.h  batch.cpp  context.cpp  context.hpp  flag.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  texture.cpp  texture.hpp
source/core/GPU/VK/: vk_context.cpp  vk_context.hpp  vk_descriptor_allocator.cpp  vk_descriptor_allocator.hpp  vk_discard_pool.hpp  vk_graph.cpp  vk_graph.hpp  vk_graph_builder.cpp  vk_graph_builder.hpp  vk_graph_compiler.cpp  vk_graph_compiler.hpp  vk_host_buffer.h  vk_pass.cpp  vk_pass.hpp  vk_pipeline_pool.cpp  vk_pipeline_pool.hpp  vk_resource.hpp  vk_resource_allocator.cpp  vk_resource_allocator.hpp  vk_scheduler.cpp  vk_scheduler.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_sync_object.hpp  vk_texture.cpp  vk_texture.hpp
source/core/GPU/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp
source/core/GPU/vk_backend/: testCode.hpp  vk_context.cpp  vk_context.hpp  vk_descriptor_allocator.cpp  vk_descriptor_allocator.hpp  vk_descriptor_layout_builder.cpp  vk_descriptor_layout_builder.hpp  vk_discard_pool.cpp  vk_discard_pool.hpp  vk_graph.cpp  vk_graph.hpp  vk_graph_builder.cpp  vk_graph_builder.hpp  vk_graph_compiler.cpp  vk_graph_compiler.hpp  vk_graph_executer.cpp  vk_memory_allocator.hpp  vk_memory_pool.cpp  vk_node.cpp  vk_node.hpp  vk_pipeline_allocator.cpp  vk_pipeline_allocator.hpp  vk_pipeline_pool.cpp  vk_pipeline_pool.hpp  vk_resource_allocator.cpp  vk_resource_allocator.hpp  vk_scheduler.cpp  vk_scheduler.hpp  vk_shader_memory.hpp  vk_shader_pool.cpp  vk_shader_pool.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_sync_object.cpp  vk_sync_object.hpp
source/core/Render/: RenderPassPool.hpp  frame_graph.cpp
source/core/User/: user.hpp
source/core/io/: event_manager.cpp  event_manager.hpp  io.cpp  io.hpp
source/core/physics/: asyn_field.cpp  asyn_field.hpp  field.cpp  field.hpp  fluid.cpp  fluid.hpp  rigid_body.cpp  rigid_body.hpp  wave.cpp  wave.hpp
source/core/render/: frame_graph.hpp  frame_graph_register.cpp  frame_graph_register.hpp  frame_viewer.cpp  frame_viewer.hpp  material.hpp  render_graph_builder.cpp  render_target_film.cpp  render_target_film.hpp  renderer.cpp  renderer.hpp  renderpass_builder.hpp  resource_manager.cpp  resource_manager.hpp  swapchainAttachment.cpp  swapchainAttachment.hpp
source/core/render_graph/: render_graph_builder.hpp  renderer.cpp  renderer.hpp
source/core/resource/: importer.cpp  importer.hpp  vertex.hpp
source/core/scene_graph/: base_geometry.cpp  base_geometry.hpp  camera.cpp  camera.hpp  camera_func.cpp  camera_func.h  camera_state.cpp  camera_state.hpp  importer_desc.hpp  light.hpp  material.hpp  material_builder.cpp  mesh.cpp  mesh.hpp  mesh_sub.hpp  model.hpp
source/core/shader/: boot_resource.hpp  deffered.frag  deffered.vert  lightning.frag  shadow_map.frag  shadow_map.vert  sys.comp  sys.vert
source/core/tensor_graph/: tensor_graph_builder.cpp  tensor_graph_builder.hpp
source/core/util/: transform.h  unique.hpp
source/feature/FPS/: camera.cpp  camera.hpp  camera_fps.hpp
source/feature/UI/: ui.cpp  ui.hpp
source/feature/User/: user.hpp
source/feature/dlss/: dlss.hpp
source/feature/sculptor/: brush.hpp  dynamic_mesh.cpp  dynamic_mesh.hpp  sculptor.cpp  sculptor.hpp  sculptor_act.cpp  sculptor_act.hpp
source/feature/tensor_graph/: tensor_graph_builder.hpp
source/feature/vTuber/: vTuber.cpp
source/resource/: buffer_builder.cpp  buffer_builder.hpp  common.hpp  descriptor_layout_builder.hpp  descriptor_layout_config.hpp  descriptor_pool.cpp  descriptor_uploader.cpp  pipeline_pool.cpp  pipeline_pool.hpp  pipeline_program.hpp  push_constant.hpp  static_buffer.cpp  static_buffer.hpp  streaming_buffer.hpp  swapchain_view.cpp  swapchain_view.hpp  texture.cpp  texture.hpp
source/shader/: def_depth.frag  depth.frag  fragment.frag  fragment.frag.spv  sculptor.vert  sculptor_background.vert.spv  uv.frag  vertex.vert  vertex.vert.spv
